--- a/Lab 1/Lab 1a/Intro_to_colab.ipynb
+++ b/Lab 1/Lab 1a/Intro_to_colab.ipynb
@@ -45,7 +45,7 @@
         "print(\"List:\", my_list)\n",
         "\n",
         "# Dictionary\n",
-        "my_dict = {\"name\": \"Doctor Doom\", \"age\": 30, \"city\": \"New York\"}\n",
+        "my_dict = {\"name\": \"Captain America\", \"age\": 104, \"city\": \"New York\"}\n",
         "print(\"Dictionary:\", my_dict)"
       ],
       "metadata": {
@@ -62,7 +62,7 @@
           "name": "stdout",
           "text": [
             "List: [1, 2, 3, 4, 5]\n",
-            "Dictionary: {'name': 'Doctor Doom', 'age': 30, 'city': 'New York'}\n"
+            "Dictionary: {'name': 'Captain America', 'age': 104, 'city': 'New York'}\n"
           ]
         }
       ]
@@ -73,7 +73,7 @@
         "def greet(name):\n",
         "    return f\"Hello, {name}!\"\n",
         "\n",
-        "print(greet(\"Lakshay Sharma\"))"
+        "print(greet(\"Ojasvi Sharda\"))"
       ],
       "metadata": {
         "colab": {
