--- a/Lab 1/Lab 1a/Intro_to_colab.ipynb
+++ b/Lab 1/Lab 1a/Intro_to_colab.ipynb
@@ -88,7 +88,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hello, Lakshay Sharma!\n"
+            "Hello, Ojasvi Sharda!\n"
           ]
         }
       ]
